--- a/index.html
+++ b/index.html
@@ -1,10 +1,312 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Отдых в Затоке. База отдыха</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@400;600;700&family=Montserrat:wght@400;500;600;700&display=swap"
+          rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+          integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+            integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+            crossorigin="anonymous"></script>
+    <script src="config.js"></script>
 </head>
 <body>
-$END$
+<section id="home">
+    <div class="home-wrapper container-1320 container-white">
+        <ul class="home-containers nav-menu">
+            <li>
+                <a class="nav-menu-link" href="#about">О нас</a>
+            </li>
+            <li>
+                <a class="nav-menu-link" href="#rooms">Номера</a>
+            </li>
+            <li>
+                <a class="nav-menu-link" href="#photo-gallery">Фотогалерея</a>
+            </li>
+            <li>
+                <a class="nav-menu-link" href="#contacts">Расположение</a>
+            </li>
+        </ul>
+
+        <div class="home-containers title-container">
+            <h1 id="title">НАЗВАНИЕ БАЗЫ ОТДЫХА</h1>
+            <span class="description">
+                Приятный и яркий отдых у Черного моря в солнечной Затоке
+            </span>
+        </div>
+
+        <div class="phone-container">
+            <span class="description">ЗАБРОНИРУЙ ПО ТЕЛЕФОНУ:</span>
+            <span class="phone-number">+38 (068) 000-00-00</span>
+        </div>
+    </div>
+</section>
+
+<section id="about">
+    <div class="container-1320 wrapper">
+        <h2 class="container-title">БУДЕМ ЗНАКОМЫ!</h2>
+        <div class="card card-container">
+            <img src="./img/about.png" class="card-img" alt="...">
+            <div class="card-body">
+                <p class="card-text">
+                    Короткий рассказ о самой базе и её хозяевах.
+
+                    Место расположения, преимущества выбора этого места для отдыха, как можно добраться, расстояние к
+                    морю, магазину, кафе, лунапарку и тому подобное. Место расположения, преимущества выбора этого места
+                    для отдыха, как можно добраться, расстояние к морю, магазину, кафе, лунапарку и тому подобное.
+
+                    Место расположения, преимущества выбора этого места для отдыха, как можно добраться, расстояние к
+                    морю, магазину, кафе, лунапарку и тому подобное. Место расположения, преимущества выбора этого места
+                    для отдыха, как можно добраться, расстояние к морю, магазину, кафе, лунапарку и тому подобное.
+
+                    Место расположения, преимущества выбора этого места для отдыха, как можно добраться, расстояние к
+                    морю, магазину, кафе, лунапарку и тому подобное.
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="rooms">
+    <div class="container-1320 wrapper">
+        <h2 class="container-title">НОМЕРА</h2>
+
+        <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div>
+                        <div class="rooms-row">
+                            <article class="room-info">
+                                <h3 class="room-title">2-х местный эконом</h3>
+                                <p class="description">
+                                    Короткое описание номера: количество кроватей, на каком этаже находится, есть ли балкон, удобства, вход с улицы или с общего коридора, вид из окна и тому подобное.
+                                </p>
+                                <ul>
+                                    <li class="list-item">
+                                        <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
+                                        Холодильник
+                                    </li>
+                                    <li class="list-item">
+                                        <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
+                                        Телевизор
+                                    </li>
+                                    <li class="list-item">
+                                        <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
+                                        Wi-fi
+                                    </li>
+                                    <li class="list-item">
+                                        <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
+                                        Общая кухня
+                                    </li>
+                                    <li class="list-item">
+                                        <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
+                                        Душ на этаже
+                                    </li>
+                                </ul>
+                            </article>
+                            <div class="room-img room-img-50" style="background-image: url('./img/room-example.png')"></div>
+                        </div>
+                        <div class="rooms-row">
+                            <div class="room-img room-img-30" style="background-image: url('./img/room-example.png')"></div>
+                            <div class="room-img room-img-30" style="background-image: url('./img/room-example.png')"></div>
+                            <div class="room-img room-img-30" style="background-image: url('./img/room-example.png')"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="internal-container">
+                        <div class="rooms-row">
+                            <article class="room-info">
+                                <h3 class="room-title">2-х местный эконом</h3>
+                                <p class="description">
+                                    Короткое описание номера: количество кроватей, на каком этаже находится, есть ли балкон, удобства, вход с улицы или с общего коридора, вид из окна и тому подобное.
+                                </p>
+                                <ul>
+                                    <li class="list-item">
+                                        <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
+                                        Холодильник
+                                    </li>
+                                    <li class="list-item">
+                                        <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
+                                        Телевизор
+                                    </li>
+                                    <li class="list-item">
+                                        <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
+                                        Wi-fi
+                                    </li>
+                                    <li class="list-item">
+                                        <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
+                                        Общая кухня
+                                    </li>
+                                    <li class="list-item">
+                                        <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
+                                        Душ на этаже
+                                    </li>
+                                </ul>
+                            </article>
+                            <div class="room-img room-img-50" style="background-image: url('./img/room-example.png')"></div>
+                        </div>
+                        <div class="rooms-row">
+                            <div class="room-img room-img-30" style="background-image: url('./img/room-example.png')"></div>
+                            <div class="room-img room-img-30" style="background-image: url('./img/room-example.png')"></div>
+                            <div class="room-img room-img-30" style="background-image: url('./img/room-example.png')"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div>
+                        <div class="rooms-row">
+                            <article class="room-info">
+                                <h3 class="room-title">2-х местный эконом</h3>
+                                <p class="description">
+                                    Короткое описание номера: количество кроватей, на каком этаже находится, есть ли балкон, удобства, вход с улицы или с общего коридора, вид из окна и тому подобное.
+                                </p>
+                                <ul>
+                                    <li class="list-item">
+                                        <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
+                                        Холодильник
+                                    </li>
+                                    <li class="list-item">
+                                        <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
+                                        Телевизор
+                                    </li>
+                                    <li class="list-item">
+                                        <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
+                                        Wi-fi
+                                    </li>
+                                    <li class="list-item">
+                                        <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
+                                        Общая кухня
+                                    </li>
+                                    <li class="list-item">
+                                        <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
+                                        Душ на этаже
+                                    </li>
+                                </ul>
+                            </article>
+                            <div class="room-img room-img-50" style="background-image: url('./img/room-example.png')"></div>
+                        </div>
+                        <div class="rooms-row">
+                            <div class="room-img room-img-30" style="background-image: url('./img/room-example.png')"></div>
+                            <div class="room-img room-img-30" style="background-image: url('./img/room-example.png')"></div>
+                            <div class="room-img room-img-30" style="background-image: url('./img/room-example.png')"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-controllers">
+                <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Предыдущий</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Следующий</span>
+                </a>
+            </div>
+        </div>
+    </div>
+    </div>
+</section>
+
+<section id="reviews">
+    <div class="wrapper container-1320 container-white">
+        <h2 class="container-title">отзывы наших гостей</h2>
+        <div class="container-1094 reviews-container">
+            <article class="reviews-card">
+                <div class="card-title-row">
+                    <img src="./img/review1.png" alt="review" class="card-img">
+                    <div class="reviewer-container">
+                        <span class="reviewer-name">Екатерина Александровна</span>
+                        <span class="reviewer-info">Учительница средней школы, Черкассы</span>
+                        <span class="reviewer-date">Отзыв оставлен: 25.07.2020</span>
+                    </div>
+                </div>
+
+                <p class="reviews-info">
+                    Отдыхали вдвоем с мужем. Всё понравилось, в номере чисто, к морю недалеко.
+
+                    Отдельно можно отметить демократичную стоимость проживания и гостеприимство хозяев. С удовольствием будем рекомендовать это место знакомым!
+                </p>
+            </article>
+
+            <article class="reviews-card">
+                <div class="card-title-row">
+                    <img src="./img/review2.png" alt="review" class="card-img">
+                    <div class="reviewer-container">
+                        <span class="reviewer-name">Дмитрий Сергеевич</span>
+                        <span class="reviewer-info">Менеджер, Полтава</span>
+                        <span class="reviewer-date">Отзыв оставлен: 15.07.2020</span>
+                    </div>
+                </div>
+
+                <p class="reviews-info">
+                    Хорошая база с нормальными условиями проживания. Всё близко, и магазин и кафешки и развлечения.
+
+                    Отлично отдохнули, в следующем году заедем еще)))))
+                </p>
+            </article>
+        </div>
+    </div>
+</section>
+
+<section id="photo-gallery">
+    <div class="wrapper container-1320">
+        <h2 class="container-title">ФОТОГАЛЕРЕЯ</h2>
+        <div class="photo-container">
+            <div class="photo photo-1 photo-width-30"></div>
+            <div class="photo photo-2 photo-width-30"></div>
+            <div class="photo photo-3 photo-width-30"></div>
+            <div class="photo photo-4 photo-width-50"></div>
+            <div class="photo photo-5 photo-width-50"></div>
+            <div class="photo photo-6 photo-width-30"></div>
+            <div class="photo photo-7 photo-width-30"></div>
+            <div class="photo photo-8 photo-width-30"></div>
+        </div>
+    </div>
+</section>
+
+<section id="contacts">
+    <div class="wrapper container-1320">
+        <h2 class="container-title">НАШИ КОНТАКТЫ</h2>
+        <div class="contacts-container">
+            <div class="contacts-card">
+                <img class="contacts-icon" src="img/place-icon.png" alt="place point">
+                <span class="contacts-type">Наш адрес:</span>
+                <p class="description">
+                    Одесская обл. Затока
+                    Улица, номер
+                </p>
+            </div>
+            <div class="contacts-card">
+                <img class="contacts-icon" src="img/phone-icon.png" alt="place point">
+                <span class="contacts-type">Номер телефона:</span>
+                <p class="phone-number description">
+                    +38 (068) 000-00-00
+                </p>
+            </div>
+        </div>
+        <div class="map-container">
+            <div id="map" class="map-img">
+                <img src="img/map.png" alt="map">
+            </div>
+        </div>
+    </div>
+</section>
+
+<footer class="footer container-white">
+    <span>© 2020 All rights reserved</span>
+</footer>
+
+<script rel="script" src="script.js"></script>
 </body>
 </html>
