--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
                     <div>
                         <div class="rooms-row">
                             <article class="room-info">
-                                <h3 class="room-title">2-х местный эконом</h3>
+                                <h3 class="room-title">
+                                    4-х местный
+                                </h3>
                                 <p class="description">
                                     Короткое описание номера: количество кроватей, на каком этаже находится, есть ли
                                     балкон, удобства, вход с улицы или с общего коридора, вид из окна и тому подобное.
@@ -110,71 +112,38 @@
                                         <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
                                         Душ на этаже
                                     </li>
-                                </ul>
-                            </article>
-                            <div class="room-img room-img-50"
-                                 style="background-image: url('./img/room-example.png')"></div>
-                        </div>
-                        <div class="rooms-row">
-                            <div class="room-img room-img-30"
-                                 style="background-image: url('./img/room-example.png')"></div>
-                            <div class="room-img room-img-30"
-                                 style="background-image: url('./img/room-example.png')"></div>
-                            <div class="room-img room-img-30"
-                                 style="background-image: url('./img/room-example.png')"></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="internal-container">
-                        <div class="rooms-row">
-                            <article class="room-info">
-                                <h3 class="room-title">2-х местный эконом</h3>
-                                <p class="description">
-                                    Короткое описание номера: количество кроватей, на каком этаже находится, есть ли
-                                    балкон, удобства, вход с улицы или с общего коридора, вид из окна и тому подобное.
-                                </p>
-                                <ul>
                                     <li class="list-item">
                                         <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
-                                        Холодильник
+                                        Кондиционер
                                     </li>
                                     <li class="list-item">
                                         <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
-                                        Телевизор
-                                    </li>
-                                    <li class="list-item">
-                                        <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
-                                        Wi-fi
-                                    </li>
-                                    <li class="list-item">
-                                        <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
-                                        Общая кухня
-                                    </li>
-                                    <li class="list-item">
-                                        <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
-                                        Душ на этаже
+                                        Небольшой шкаф
                                     </li>
                                 </ul>
                             </article>
                             <div class="room-img room-img-50"
-                                 style="background-image: url('./img/room-example.png')"></div>
+                                 style="background-image: url('./img/room1/img1.png')"></div>
                         </div>
                         <div class="rooms-row">
                             <div class="room-img room-img-30"
-                                 style="background-image: url('./img/room-example.png')"></div>
+                                 style="background-image: url('./img/room1/img2.png')"></div>
                             <div class="room-img room-img-30"
-                                 style="background-image: url('./img/room-example.png')"></div>
+                                 style="background-image: url('./img/room1/img3.png')"></div>
                             <div class="room-img room-img-30"
-                                 style="background-image: url('./img/room-example.png')"></div>
+                                 style="background-image: url('./img/room1/img4.png')"></div>
                         </div>
                     </div>
                 </div>
+
+
                 <div class="carousel-item">
                     <div>
                         <div class="rooms-row">
                             <article class="room-info">
-                                <h3 class="room-title">2-х местный эконом</h3>
+                                <h3 class="room-title">
+                                    4-х местный
+                                </h3>
                                 <p class="description">
                                     Короткое описание номера: количество кроватей, на каком этаже находится, есть ли
                                     балкон, удобства, вход с улицы или с общего коридора, вид из окна и тому подобное.
@@ -203,18 +172,166 @@
                                 </ul>
                             </article>
                             <div class="room-img room-img-50"
-                                 style="background-image: url('./img/room-example.png')"></div>
+                                 style="background-image: url('./img/room2/img1.png')"></div>
                         </div>
                         <div class="rooms-row">
                             <div class="room-img room-img-30"
-                                 style="background-image: url('./img/room-example.png')"></div>
+                                 style="background-image: url('./img/room2/img2.png')"></div>
                             <div class="room-img room-img-30"
-                                 style="background-image: url('./img/room-example.png')"></div>
+                                 style="background-image: url('./img/room2/img3.png')"></div>
                             <div class="room-img room-img-30"
-                                 style="background-image: url('./img/room-example.png')"></div>
+                                 style="background-image: url('./img/room2/img4.png')"></div>
                         </div>
                     </div>
                 </div>
+
+
+                <div class="carousel-item">
+                    <div>
+                        <div class="rooms-row">
+                            <article class="room-info">
+                                <h3 class="room-title">
+                                    4-х местный эконом
+                                </h3>
+                                <p class="description">
+                                    Короткое описание номера: количество кроватей, на каком этаже находится, есть ли
+                                    балкон, удобства, вход с улицы или с общего коридора, вид из окна и тому подобное.
+                                </p>
+                                <ul>
+                                    <li class="list-item">
+                                        <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
+                                        Холодильник
+                                    </li>
+                                    <li class="list-item">
+                                        <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
+                                        Телевизор
+                                    </li>
+                                    <li class="list-item">
+                                        <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
+                                        Wi-fi
+                                    </li>
+                                    <li class="list-item">
+                                        <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
+                                        Общая кухня
+                                    </li>
+                                    <li class="list-item">
+                                        <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
+                                        Душ на этаже
+                                    </li>
+                                </ul>
+                            </article>
+                            <div class="room-img room-img-50"
+                                 style="background-image: url('./img/room3/img1.png')"></div>
+                        </div>
+                        <div class="rooms-row">
+                            <div class="room-img room-img-30"
+                                 style="background-image: url('./img/room3/img2.png')"></div>
+                            <div class="room-img room-img-30"
+                                 style="background-image: url('./img/room3/img3.png')"></div>
+                            <div class="room-img room-img-30"
+                                 style="background-image: url('./img/room3/img4.png')"></div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="carousel-item">
+                    <div>
+                        <div class="rooms-row">
+                            <article class="room-info">
+                                <h3 class="room-title">
+                                    2-х местный эконом
+                                </h3>
+                                <p class="description">
+                                    Короткое описание номера: количество кроватей, на каком этаже находится, есть ли
+                                    балкон, удобства, вход с улицы или с общего коридора, вид из окна и тому подобное.
+                                </p>
+                                <ul>
+                                    <li class="list-item">
+                                        <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
+                                        Холодильник
+                                    </li>
+                                    <li class="list-item">
+                                        <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
+                                        Телевизор
+                                    </li>
+                                    <li class="list-item">
+                                        <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
+                                        Wi-fi
+                                    </li>
+                                    <li class="list-item">
+                                        <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
+                                        Общая кухня
+                                    </li>
+                                    <li class="list-item">
+                                        <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
+                                        Душ на этаже
+                                    </li>
+                                </ul>
+                            </article>
+                            <div class="room-img room-img-50"
+                                 style="background-image: url('./img/room4/img1.png')"></div>
+                        </div>
+                        <div class="rooms-row">
+                            <div class="room-img room-img-30"
+                                 style="background-image: url('./img/room4/img2.png')"></div>
+                            <div class="room-img room-img-30"
+                                 style="background-image: url('./img/room4/img3.png')"></div>
+                            <div class="room-img room-img-30"
+                                 style="background-image: url('./img/room4/img4.png')"></div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="carousel-item">
+                    <div>
+                        <div class="rooms-row">
+                            <article class="room-info">
+                                <h3 class="room-title">
+                                    2-х местный
+                                </h3>
+                                <p class="description">
+                                    Короткое описание номера: количество кроватей, на каком этаже находится, есть ли
+                                    балкон, удобства, вход с улицы или с общего коридора, вид из окна и тому подобное.
+                                </p>
+                                <ul>
+                                    <li class="list-item">
+                                        <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
+                                        Холодильник
+                                    </li>
+                                    <li class="list-item">
+                                        <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
+                                        Телевизор
+                                    </li>
+                                    <li class="list-item">
+                                        <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
+                                        Wi-fi
+                                    </li>
+                                    <li class="list-item">
+                                        <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
+                                        Общая кухня
+                                    </li>
+                                    <li class="list-item">
+                                        <img src="./img/list-arrow.png" class="list-arrow-icon" alt="list-arrow">
+                                        Душ на этаже
+                                    </li>
+                                </ul>
+                            </article>
+                            <div class="room-img room-img-50"
+                                 style="background-image: url('./img/room5/img1.png')"></div>
+                        </div>
+                        <div class="rooms-row">
+                            <div class="room-img room-img-30"
+                                 style="background-image: url('./img/room5/img2.png')"></div>
+                            <div class="room-img room-img-30"
+                                 style="background-image: url('./img/room5/img3.png')"></div>
+                            <div class="room-img room-img-30"
+                                 style="background-image: url('./img/room5/img4.png')"></div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
             <div class="carousel-controllers">
                 <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
