--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div class="container-1320 wrapper">
         <h2 class="container-title">НОМЕРА</h2>
 
-        <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+        <div id="roomsCarousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <div>
@@ -334,11 +334,11 @@
 
             </div>
             <div class="carousel-controllers">
-                <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+                <a class="carousel-control-prev" href="#roomsCarousel" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="sr-only">Предыдущий</span>
                 </a>
-                <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+                <a class="carousel-control-next" href="#roomsCarousel" role="button" data-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="sr-only">Следующий</span>
                 </a>
